[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-cogs"
version = "0.1.0"
authors = [
    {name = "avnigo", email = "43263288+avnigo@users.noreply.github.com"},
]
description = "A streamlit app to view and label COGs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "leafmap",
    "localtileserver",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "debugpy",
    "pyright",
    "flake8",
    "black",
    "ipython",
    "ipdb",
]
